--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -18,6 +18,6 @@
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginTop="4dp"
-        android:singleLine="true"/>
+        android:maxLines="1"/>
 
 </LinearLayout>
