--- a/app/src/main/res/values/not_translatable_strings.xml
+++ b/app/src/main/res/values/not_translatable_strings.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_us_copyright" translatable="false">Copyright 2013–2016 Frédéric Julian</string>
+    <string name="about_us_copyright" translatable="false"><![CDATA[
+    Copyright 2016–2020 Thekkathir IT Team <br/>
+    Copyright 2013–2016 Frédéric Julian
+    ]]></string>
     <string name="about_us_content" translatable="false"><![CDATA[
     <b>Community</b><br/>
     • Ildar Mulyukov<br/><br/>
 
     <b>Developers</b><br/>
+    • Arun Prakash<br/>
+    • Surya Prakash<br/>
     • eighthave<br/>
     • equiem<br/>
     • Frédéric Julian<br/>
@@ -17,20 +22,6 @@
     • Shapochkin Mihail<br/>
     • Suyash Bhatt<br/>
     • Zhaofeng Li<br/><br/>
-
-    <b>Translators</b><br/>
-    • Aitor Beriain<br/>
-    • Benjamin Schütte<br/>
-    • Changwoo Ryu<br/>
-    • chenjia404<br/>
-    • Danilo Treffiletti<br/>
-    • Enric Morales<br/>
-    • Jaroslav Lichtblau<br/>
-    • Jean Lorenz Hertel<br/>
-    • Jozef Jaroščiak<br/>
-    • Matthias Dill<br/>
-    • Mladen Pejaković<br/>
-    • Zheng Juefei<br/><br/>
 
     This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. See http://www.gnu.org/licenses<br/><br/>
     Some parts of this software are based on \'Sparse rss\', Copyright 2010-2012 Stefan Handschuch, under the MIT license.
